fixed margin issues for about images on small screen

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -703,9 +703,6 @@ footer p {
     }
 }
 @media (min-width: 360px) {
-    .abt-img {
-        margin-left: -10px
-    }
     .footer-txt {
         font-size: 14px;
     }
@@ -714,7 +711,7 @@ footer p {
     .abt-img {
         width: 300px;
         height: 300px;
-        margin-left: -15px;
+        
     }
     .blog-img {
         width: 350px;
